# didactic-octo-spork

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  main.cpp
include/: application.h  camera.h  globals.h  material.h  object.h  scene.h  text.h  texture.h  window.h
shaders/: flat_shader.vert  shader.functions  shaders.functions.frag  smooth_shader.frag
shaders/00 - text/: shader.frag  shader.vert
shaders/01 - plain color/: shader.frag  shader.vert
shaders/02 - plain texture/: shader.frag  shader.vert
shaders/03 - plain vertex color/: shader.frag  shader.vert
shaders/11 - smooth plain color/: shader.frag  shader.vert
src/: application.cpp  camera.cpp  globals.cpp  material.cpp  object.cpp  scene.cpp  text.cpp  texture.cpp  window.cpp
